--- a/index.html
+++ b/index.html
@@ -69,16 +69,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="4000">
-                    <img src="./assets/Images/image 1.jpg" class="d-block w-100" alt="carousel Image"
-                        style="height: 90vh;">
+                    <img src="./assets/Images/image 1.jpg" class="d-block w-100" alt="carousel Image">
                 </div>
                 <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./assets/Images/image 2.jpg" class="d-block w-100" alt="carousel Image"
-                        style="height: 90vh;">
+                    <img src="./assets/Images/image 2.jpg" class="d-block w-100" alt="carousel Image">
                 </div>
                 <div class="carousel-item" data-bs-interval="4000">
-                    <img src="./assets/Images/image 3.jpg" class="d-block w-100" alt="carousel Image"
-                        style="height: 90vh;">
+                    <img src="./assets/Images/image 3.jpg" class="d-block w-100" alt="carousel Image">
                 </div>
             </div>
 
