--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <!-- About Us Section -->
         <section id="aboutUs" class="container-fluid bg-warning my-5 py-5">
-            <div class=" w-100 d-flex flex-md-nowrap flex-wrap gap-3">
+            <div class=" w-100 d-flex flex-sm-nowrap flex-wrap gap-3">
                 <div class="col-md-6 d-flex justify-content-center flex-column gap-4 p-4 ">
                     <h1 class=" text-uppercase fw-semibold">about us</h1>
                     <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis perspiciatis eos
@@ -148,6 +148,13 @@
             <h1 class="fw-semibold text-uppercase text-center my-2">our furnitures</h1>
             <p class="text-center mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, cumque.
             </p>
+
+            <div class="w-100 d-flex flex-sm-nowrap flex-wrap gap-2">
+                <div class="col-xl-6 w-100 bg-dark">
+                    <h1 class="">hello</h1>
+                </div>
+                <div class="col-xl-6 w-100 bg-warning">hello</div>
+            </div>
         </section>
     </main>
 
