changes commit in shop section

--- a/index.html
+++ b/index.html
@@ -150,12 +150,30 @@
             </p>
 
             <div class="w-100 d-flex flex-sm-nowrap flex-wrap gap-2">
-                <div class="col-xl-6 w-100 bg-dark">
-                    <h1 class="">hello</h1>
+                <div class="col-12 col-sm-6 border p-4">
+                    <div class="w-100" style="height: 450px">
+                        <img src="./assets/Images/furnitureImage 02.jpg" alt="" class="w-100 h-100">
+                    </div>
+                    <h3 class="my-3 fw-bold">Lorem ipsum dolor sit amet.</h3>
+                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, labore doloribus!
+                        Voluptate in
+                        cum consequuntur?</p>
+                    <a href="#" class="btn btn-outline-dark d-inline ">Explore more</a>
                 </div>
-                <div class="col-xl-6 w-100 bg-warning">hello</div>
+                <div class="col-12 col-sm-6 border p-4">
+                    <div class="w-100" style="height: 450px">
+                        <img src="./assets/Images/furnitureImage 02.jpg" alt="" class="w-100 h-100">
+                    </div>
+                    <h3 class="my-3 fw-bold">Lorem ipsum dolor sit amet.</h3>
+                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, labore doloribus!
+                        Voluptate in
+                        cum consequuntur?</p>
+                    <a href="#" class="btn btn-outline-dark d-inline ">Explore more</a>
+                </div>
             </div>
         </section>
+
+
     </main>
 
     <!-- BootStrap JS Link -->
