--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
         <!-- About Us Section -->
         <section id="aboutUs" class="container-fluid bg-warning my-5 py-5">
             <div class=" w-100 d-flex flex-sm-nowrap flex-wrap gap-3">
-                <div class="col-md-6 d-flex justify-content-center flex-column gap-4 p-4 ">
-                    <h1 class=" text-uppercase fw-semibold">about us</h1>
-                    <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis perspiciatis eos
+                <div class="col-md-6 d-flex flex-column gap-4 p-4 ">
+                    <h1 class=" text-uppercase fw-bold mb-4">about us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis perspiciatis eos
                         provident
                         saepe natus molestias aliquam pariatur repudiandae nobis perferendis, reiciendis dignissimos!
                         Consequuntur cumque sed unde itaque aliquam nihil id Lorem, ipsum dolor sit amet consectetur
                         adipisicing elit. Reiciendis incidunt autem atque non quod aliquam explicabo, pariatur ipsum!
                         Non adipisci fuga voluptatum eaque consectetur. Ad in earum quas molestias quaerat!</p>
-                    <a href="#" class="btn btn-outline-dark d-inline ">Read more</a>
+                    <a href="#" class="btn btn-outline-dark d-inline mt-5">Read more</a>
                 </div>
-                <div class="col-sm-6 d-flex justify-content-center">
+                <div class="col-sm-6 d-flex justify-content-center align-items-center">
                     <img src="./assets/Images/about us image.png" alt="" class="w-100">
                 </div>
             </div>
@@ -152,23 +152,23 @@
             <div class="w-100 d-flex flex-sm-nowrap flex-wrap gap-2">
                 <div class="col-12 col-sm-6 border p-4">
                     <div class="w-100" style="height: 450px">
-                        <img src="./assets/Images/furnitureImage 02.jpg" alt="" class="w-100 h-100">
+                        <img src="./assets/Images/furnitureImage 01.jpg" alt="" class="w-100 h-100">
                     </div>
-                    <h3 class="my-3 fw-bold">Lorem ipsum dolor sit amet.</h3>
+                    <h4 class="my-3 fw-bold">Lorem ipsum dolor sit amet.</h4>
                     <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, labore doloribus!
                         Voluptate in
                         cum consequuntur?</p>
-                    <a href="#" class="btn btn-outline-dark d-inline ">Explore more</a>
+                    <a href="#" class="btn btn-outline-dark d-inline fw-semibold">Explore more</a>
                 </div>
                 <div class="col-12 col-sm-6 border p-4">
                     <div class="w-100" style="height: 450px">
                         <img src="./assets/Images/furnitureImage 02.jpg" alt="" class="w-100 h-100">
                     </div>
-                    <h3 class="my-3 fw-bold">Lorem ipsum dolor sit amet.</h3>
+                    <h4 class="my-3 fw-bold">Lorem ipsum dolor sit amet.</h4>
                     <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, labore doloribus!
                         Voluptate in
                         cum consequuntur?</p>
-                    <a href="#" class="btn btn-outline-dark d-inline ">Explore more</a>
+                    <a href="#" class="btn btn-outline-dark d-inline fw-semibold">Explore more</a>
                 </div>
             </div>
         </section>
