changes commit in carousel

--- a/index.html
+++ b/index.html
@@ -68,17 +68,32 @@
                     aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="4000">
+                <div class="carousel-item active position-relative" data-bs-interval="4000">
                     <img src="./assets/Images/image 1.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
+                    <div
+                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4">
+                        <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, mollitia.</p>
+                    </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
+                <div class="carousel-item position-relative" data-bs-interval="4000">
                     <img src="./assets/Images/image 2.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
+                    <div
+                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4">
+                        <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, mollitia.</p>
+                    </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="4000">
+                <div class="carousel-item position-relative" data-bs-interval="4000">
                     <img src="./assets/Images/image 3.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
+                    <div
+                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4">
+                        <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, mollitia.</p>
+                    </div>
                 </div>
             </div>
 
@@ -144,6 +159,7 @@
             </div>
         </section>
 
+        <!-- Shop Section -->
         <section id="ourShop" class="container my-5 py-5">
             <h1 class="fw-semibold text-uppercase text-center my-2">our furnitures</h1>
             <p class="text-center mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, cumque.
@@ -171,6 +187,11 @@
                     <a href="#" class="btn btn-outline-dark d-inline fw-semibold">Explore more</a>
                 </div>
             </div>
+        </section>
+
+        <!-- Contact Us Section -->
+        <section id="contactUs">
+
         </section>
 
 
