--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- BooStrap CDN Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="./assets/CSS/styles.css">
     <!-- FontAwesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         crossorigin="anonymous" />
@@ -68,31 +68,34 @@
                     aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active position-relative" data-bs-interval="4000">
+                <div class="carousel-item active position-relative" data-bs-interval="40000">
                     <img src="./assets/Images/image 1.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
                     <div
-                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4">
+                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4 text-center">
                         <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, mollitia.</p>
+                        <p class="text-dark fw-semibold">There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some fo</p>
                     </div>
                 </div>
                 <div class="carousel-item position-relative" data-bs-interval="4000">
                     <img src="./assets/Images/image 2.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
                     <div
-                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4">
+                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4 text-center">
                         <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, mollitia.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some fo</p>
                     </div>
                 </div>
                 <div class="carousel-item position-relative" data-bs-interval="4000">
                     <img src="./assets/Images/image 3.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
                     <div
-                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4">
+                        class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4 text-center">
                         <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, mollitia.</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some fo</p>
                     </div>
                 </div>
             </div>
