--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
                     aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active position-relative" data-bs-interval="40000">
+                <div class="carousel-item active position-relative" data-bs-interval="4000">
                     <img src="./assets/Images/image 1.jpg" class="d-block w-100" alt="carousel Image"
                         style="height: 90vh; object-fit: cover;">
                     <div
                         class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4 text-center">
                         <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
-                        <p class="text-dark fw-semibold">There are many variations of passages of Lorem Ipsum available, but the majority have
+                        <p class="text-dark fw-semibold">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have
                             suffered alteration in some fo</p>
                     </div>
                 </div>
@@ -107,9 +108,8 @@
             <h1 class="fw-semibold text-uppercase text-center my-2">our services</h1>
             <p class="text-center mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, cumque.
             </p>
-            <div class="w-100 d-flex justify-content-center gap-5 flex-wrap">
-
-                <div class="d-flex align-items-center justify-content-center flex-column gap-4 mb-4"
+            <div class="w-100 d-flex justify-content-center gap-5 ga flex-wrap">
+                <div class="d-flex align-items-center justify-content-center flex-column gap-3 mb-4 py-4 px-5 text-center shadow bg-white"
                     style="width: 250px">
                     <i class="fa-solid fa-couch text-warning" style="font-size: 5rem"></i>
                     <h3 class="text-uppercase fw-normal text mb-0">furnitures</h3>
@@ -117,7 +117,7 @@
                     <a href="#" class="btn btn-outline-warning text-dark fw-semibold text-uppercase">read more</a>
                 </div>
 
-                <div class="d-flex align-items-center justify-content-center flex-column gap-4 mb-4"
+                <div class="d-flex align-items-center justify-content-center flex-column gap-3 mb-4 py-4 px-5 text-center shadow bg-white"
                     style="width: 250px">
                     <i class="fa-solid fa-shop text-warning" style="font-size: 5rem"></i>
                     <h3 class="text-uppercase fw-normal text mb-0">office</h3>
@@ -125,7 +125,7 @@
                     <a href="#" class="btn btn-outline-warning text-dark fw-semibold text-uppercase">read more</a>
                 </div>
 
-                <div class="d-flex align-items-center justify-content-center flex-column gap-4 mb-4"
+                <div class="d-flex align-items-center justify-content-center flex-column gap-3 mb-4 py-4 px-5 text-center shadow bg-white"
                     style="width: 250px">
                     <i class="fa-solid fa-house-chimney text-warning" style="font-size: 5rem"></i>
                     <h3 class="text-uppercase fw-normal text mb-0">home</h3>
@@ -133,7 +133,7 @@
                     <a href="#" class="btn btn-outline-warning text-dark fw-semibold text-uppercase">read more</a>
                 </div>
 
-                <div class="d-flex align-items-center justify-content-center flex-column gap-4 mb-4"
+                <div class="d-flex align-items-center justify-content-center flex-column gap-3 mb-4 py-4 px-5 text-center shadow bg-white"
                     style="width: 250px">
                     <i class="fa-solid fa-bed text-warning" style="font-size: 5rem"></i>
                     <h3 class="text-uppercase fw-normal text mb-0">bedroom</h3>
@@ -169,7 +169,7 @@
             </p>
 
             <div class="w-100 d-flex flex-sm-nowrap flex-wrap gap-2">
-                <div class="col-12 col-sm-6 border p-4">
+                <div class="col-12 col-sm-6 shadow px-3 pt-2 pb-5 mb-5 bg-white rounded">
                     <div class="w-100" style="height: 450px">
                         <img src="./assets/Images/furnitureImage 01.jpg" alt="" class="w-100 h-100">
                     </div>
@@ -179,7 +179,7 @@
                         cum consequuntur?</p>
                     <a href="#" class="btn btn-outline-dark d-inline fw-semibold">Explore more</a>
                 </div>
-                <div class="col-12 col-sm-6 border p-4">
+                <div class="col-12 col-sm-6 shadow px-3 pt-2 pb-5 mb-5 bg-white rounded">
                     <div class="w-100" style="height: 450px">
                         <img src="./assets/Images/furnitureImage 02.jpg" alt="" class="w-100 h-100">
                     </div>
