--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar  -->
     <nav class="navbar navbar-expand-sm bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand fw-semibold" href="#">BUILT BETTER</a>
+            <a class="navbar-brand fw-bold" href="#">BUILT BETTER</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                         <a class="nav-link text-dark" href="#ourShop">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Contact</a>
+                        <a class="nav-link text-dark" href="#contactUs">Contact</a>
                     </li>
                 </ul>
 
@@ -193,8 +193,10 @@
         </section>
 
         <!-- Contact Us Section -->
-        <section id="contactUs">
-
+        <section id="contactUs" class="container">
+            <div></div>
+            <div>
+                <!-- contact form -->
         </section>
 
 
