--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
 
             <!-- contact form -->
         </section>
-
-
     </main>
+    <footer class="container-fluid bg-dark m-0 p-0">
+        <h1>hello</h1>
+    </footer>
 
     <!-- BootStrap JS Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
