changes commit in footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         crossorigin="anonymous" />
 
-    <title>Using Bootstrap</title>
+    <title>Built Better</title>
 </head>
 
 <body>
@@ -224,8 +224,29 @@
             <!-- contact form -->
         </section>
     </main>
-    <footer class="container-fluid bg-dark m-0 p-0">
-        <h1>hello</h1>
+    <footer class="container-fluid bg-light m-0 p-0">
+        <div class="d-flex gap-3 flex-wrap flex-md-nowrap p-1 p-md-5">
+            <div class="col-12 col-md p-2 m-0">
+                <h3 class="fw-bold mb-4">Let's Design together</h3>
+                <p class="m-0">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by</p>
+            </div>
+            <div class="col-12 col-md p-2 m-0">
+                <h3 class="fw-semibold mb-4">Let Us Help You</h3>
+                <p class="m-0">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by</p>
+            </div>
+            <div class="col-12 col-md p-2 m-0">
+                <h3 class="fw-semibold mb-4">Information</h3>
+                <p class="m-0">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by.</p>
+            </div>
+            <div class="col-12 col-md p-2 m-0">
+                <h3 class="fw-semibold mb-4">Our Design</h3>
+                <p class="m-0">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by</p>
+            </div>
+        </div>
     </footer>
 
     <!-- BootStrap JS Link -->
