changes commit in carousel

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div
                         class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4 text-center">
                         <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                        <p class="text-dark fw-semibold">There are many variations of passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some fo</p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div
                         class="position-absolute w-100 h-100 top-0 left-0 d-flex justify-content-center align-items-center flex-column p-4 text-center">
                         <h1 class="fw-bold" style="letter-spacing: 4px">Furniture</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                        <p class="text-dark fw-semibold">There are many variations of passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some fo</p>
                     </div>
                 </div>
