changes commit in contact section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </section>
 
         <!-- Contact Us Section -->
-        <section id="contactUs" class="w-100 mb-5 pb-5">
+        <section id="contactUs" class="w-100 my-5 py-5">
             <h1 class="fw-semibold text-uppercase text-center mt-2 mb-5">Contact Us</h1>
             <div class="d-flex gap-2 flex-wrap flex-md-nowrap">
                 <div class="col-12 col-md-6 text-center p-4">
